--- a/app/globals.css
+++ b/app/globals.css
@@ -7,15 +7,21 @@
     --light-500: 163 163 163;
     --dark-400: 69 69 69;
     --dark-500: 31 31 31;
+    --dark-600: 26 26 26;
     --gold-300: 195 176 145;
     --gold-400: 155 130 88;
     --gold-500: 140 122 93;
   }
 }
 
+.grain-light {
+  background-image: url("../public/grain.png");
+  background-size: 1ex;
+  background-repeat: repeat;
+}
+
 .grain {
   background-image: url("../public/grain.png");
-  /* background-size: 30ex; */
   background-size: 40ex;
   background-repeat: repeat;
 }
@@ -44,4 +50,13 @@ h2, h3 {
 
 .shadow-3xl {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+}
+
+.inner-shadow-bottom {
+  box-shadow: 
+        inset 0px -39px 39px -30px #000000
+}
+
+html::-webkit-scrollbar {
+  display: none;
 }
