add connect section

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
     --dark-400: 69 69 69;
     --dark-500: 31 31 31;
     --dark-600: 26 26 26;
+    --dark-700: 22 22 22;
     --gold-200: 245 222 179;
     --gold-300: 195 176 145;
     --gold-400: 155 130 88;
