add connect section

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,7 @@
     --dark-500: 31 31 31;
     --dark-600: 26 26 26;
     --dark-700: 22 22 22;
+    --dark-800: 3 3 3;
     --gold-200: 245 222 179;
     --gold-300: 195 176 145;
     --gold-400: 155 130 88;
